--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blanchard — художественная галерея</title>
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="https://aleksey-davidenko.github.io/project/css/normalize.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
-  <link rel="stylesheet" href="/css/choices.min.css">
-  <link rel="stylesheet" href="/css/justValidateTooltip.min.css">
-  <link rel="stylesheet" href="/css/jquery-ui.min.css">
-  <link rel="stylesheet" href="/css/fonts.css">
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="/img/header/Blanchard.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://aleksey-davidenko.github.io/project/css/choices.min.css">
+  <link rel="stylesheet" href="https://aleksey-davidenko.github.io/project/css/justValidateTooltip.min.css">
+  <link rel="stylesheet" href="https://aleksey-davidenko.github.io/project/css/jquery-ui.min.css">
+  <link rel="stylesheet" href="https://aleksey-davidenko.github.io/project/css/fonts.css">
+  <link rel="stylesheet" href="https://aleksey-davidenko.github.io/project/css/styles.css">
+  <link rel="shortcut icon" href="https://aleksey-davidenko.github.io/project/img/header/Blanchard.png" type="image/x-icon">
 </head>
 <body>
   <div class="preloader">
