--- a/index.html
+++ b/index.html
@@ -2070,13 +2070,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
-  <script src="/js/choices.min.js"></script>
+  <script src="https://aleksey-davidenko.github.io/project/js/choices.min.js"></script>
   <script src="https://unpkg.com/popper.js@1"></script>
   <script src="https://unpkg.com/tippy.js@5/dist/tippy-bundle.iife.js"></script>
-  <script src="/js/just-validate.min.js"></script>
-  <script src="/js/jquery-ui-min.js"></script>
-  <script src="/js/inputmask.min.js"></script>
+  <script src="https://aleksey-davidenko.github.io/project/js/just-validate.min.js"></script>
+  <script src="https://aleksey-davidenko.github.io/project/js/jquery-ui-min.js"></script>
+  <script src="https://aleksey-davidenko.github.io/project/js/inputmask.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&amp;lang=ru_RU" type="text/javascript"></script>
-  <script src="/js/scripts.js"></script>
+  <script src="https://aleksey-davidenko.github.io/project/js/scripts.js"></script>
 </body>
 </html>
