--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </head>
 <body>
   <div class="preloader">
-    <img class="preloader__img" src="/img/header/Лого.png" alt="Сайт загружается">
+    <img class="preloader__img" src="https://aleksey-davidenko.github.io/project/img/header/Лого.png" alt="Сайт загружается">
   </div>
   <header class="header">
     <div class="header__up">
       <div class="container-fluid header__up-container">
         <div class="header__up-container-left">
           <a class="header__logo" href="/">
-            <img class="header__logo-img" src="/img/header/Лого(2).png" alt="Логотип Blanchard">
+            <img class="header__logo-img" src="https://aleksey-davidenko.github.io/project/img/header/Лого(2).png" alt="Логотип Blanchard">
           </a>        
           <button class="header__burger-menu-button" id="burger-menu-toggle">
             <span></span>
@@ -36,8 +36,8 @@
         <div class="header__up-container-center">
           <a class="header__mob-logo" href="/">
             <picture>
-              <source srcset="/img/header/Лого(1).png" media="(max-width:767px)">
-              <img class="header__logo-img" src="/img/header/Лого(3).png" alt="Мобильный логотип Blanchard">
+              <source srcset="https://aleksey-davidenko.github.io/project/img/header/Лого(1).png" media="(max-width:767px)">
+              <img class="header__logo-img" src="https://aleksey-davidenko.github.io/project/img/header/Лого(3).png" alt="Мобильный логотип Blanchard">
             </picture>
           </a>
         </div>
@@ -320,82 +320,82 @@
             <div class="gallery__images swiper-wrapper">
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/1.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/1.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/1.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/1.png" alt="gallery_up-item_1.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/1.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/1.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/1.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/1.png" alt="gallery_up-item_1.jpg">
                 </picture>  
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/2.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/2.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/2.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/2.png" alt="gallery_down-item_1.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/2.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/2.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/2.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/2.png" alt="gallery_down-item_1.jpg">
                 </picture> 
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/3.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/3.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/3.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/3.png" alt="gallery_up-item_2.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/3.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/3.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/3.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/3.png" alt="gallery_up-item_2.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/4.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/4.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/4.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/4.png" alt="gallery_down-item_2.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/4.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/4.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/4.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/4.png" alt="gallery_down-item_2.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/5.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/5.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/5.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/5.png" alt="gallery_up-item_3.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/5.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/5.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/5.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/5.png" alt="gallery_up-item_3.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/6.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/6.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/6.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/6.png" alt="gallery_down-item_3.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/6.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/6.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/6.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/6.png" alt="gallery_down-item_3.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/7.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/7.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/7.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/7.png" alt="gallery_up-item_4.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/7.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/7.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/7.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/7.png" alt="gallery_up-item_4.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/8.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/8.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/8.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/8.png" alt="gallery_down-item_4.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/8.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/8.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/8.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/8.png" alt="gallery_down-item_4.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/9.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/9.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/9.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/9.png" alt="gallery_up-item_5.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/9.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/9.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/9.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/9.png" alt="gallery_up-item_5.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
                 <picture>
-                  <source srcset="/img/gallery/gallery320/10.png" media="(max-width:767px)">
-                  <source srcset="/img/gallery/gallery768/10.png" media="(max-width:1020px)">
-                  <source srcset="/img/gallery/gallery1024/10.png" media="(max-width:1200px)">
-                  <img class="gallery__item-img" src="/img/gallery/10.png" alt="gallery_down-item_5.jpg">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery320/10.png" media="(max-width:767px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery768/10.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/gallery/gallery1024/10.png" media="(max-width:1200px)">
+                  <img class="gallery__item-img" src="https://aleksey-davidenko.github.io/project/img/gallery/10.png" alt="gallery_down-item_5.jpg">
                 </picture>
               </button>
               <button class="gallery__item swiper-slide">
