--- a/index.html
+++ b/index.html
@@ -1745,10 +1745,10 @@
             <div class="publications__items swiper-wrapper">
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/1.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/1.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications.png" alt="Искусство цвета">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/1.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/1.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications.png" alt="Искусство цвета">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text">
@@ -1763,10 +1763,10 @@
               </div>
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/2.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/2.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.1.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications1.png" alt="Типографика">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/2.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/2.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.1.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications1.png" alt="Типографика">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text">
@@ -1781,10 +1781,10 @@
               </div>                                 
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/3.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/3.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.2.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications2.png" alt="Книга про буквы">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/3.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/3.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.2.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications2.png" alt="Книга про буквы">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text">        
@@ -1799,10 +1799,10 @@
               </div>                     
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/4.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/4.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.3.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications3.png" alt="Николай Ильин">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/4.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/4.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.3.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications3.png" alt="Николай Ильин">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text"> 
@@ -1817,10 +1817,10 @@
               </div>
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/5.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/5.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.4.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications4.png" alt="Модульные сетки в граф...">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/5.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/5.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.4.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications4.png" alt="Модульные сетки в граф...">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text">   
@@ -1835,10 +1835,10 @@
               </div>
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/6.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/6.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.5.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications5.png" alt="Эволюция графических ст...">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/6.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/6.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.5.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications5.png" alt="Эволюция графических ст...">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text">
@@ -1853,10 +1853,10 @@
               </div>
               <div class="publications__item swiper-slide">
                 <picture>
-                  <source srcset="/img/publications/publications320/7.png" media="(max-width:420px)">
-                  <source srcset="/img/publications/publications768/7.png" media="(max-width:1020px)">
-                  <source srcset="/img/publications/publications1024/1024.6.png" media="(max-width:1200px)">
-                  <img class="publications__item-img" src="/img/publications/publications6.png" alt="Искусство и визуальное в... ">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications320/7.png" media="(max-width:420px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications768/7.png" media="(max-width:1020px)">
+                  <source srcset="https://aleksey-davidenko.github.io/project/img/publications/publications1024/1024.6.png" media="(max-width:1200px)">
+                  <img class="publications__item-img" src="https://aleksey-davidenko.github.io/project/img/publications/publications6.png" alt="Искусство и визуальное в... ">
                 </picture>
                 <div class="publications__item-info">
                   <div class="publications__item-info-text">
@@ -1919,47 +1919,47 @@
             <div class="projects__partners-items swiper-wrapper">
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/1.png" alt="партнер 1">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/1.png" alt="партнер 1">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/2.png" alt="партнер 2">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/2.png" alt="партнер 2">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/3.png" alt="партнер 3">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/3.png" alt="партнер 3">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/4.png" alt="партнер 4">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/4.png" alt="партнер 4">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/5.png" alt="партнер 5">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/5.png" alt="партнер 5">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/6.png" alt="партнер 6">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/6.png" alt="партнер 6">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/7.png" alt="партнер 7">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/7.png" alt="партнер 7">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/8.png" alt="партнер 8">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/8.png" alt="партнер 8">
                 </a>
               </div>
               <div class="projects__partners-item swiper-slide">
                 <a class="projects__partners-item-link" href="#">
-                  <img class="projects__partners-item-img" src="/img/projects/9.png" alt="партнер 9">
+                  <img class="projects__partners-item-img" src="https://aleksey-davidenko.github.io/project/img/projects/9.png" alt="партнер 9">
                 </a>
               </div>
             </div>
@@ -2024,7 +2024,7 @@
     <div class="container-fluid footer__container">
       <div class="footer__left">
         <a class="footer__logo" href="/">
-          <img class="footer__logo-img" src="/img/header/Лого(2).png" alt="Логотип Blanchard">
+          <img class="footer__logo-img" src="https://aleksey-davidenko.github.io/project/img/header/Лого(2).png" alt="Логотип Blanchard">
         </a> 
       </div>
       <div class="footer__right">
@@ -2051,7 +2051,7 @@
   <div class="gallery__modal">
     <div class="gallery__modal-container">
       <div class="gallery__modal-container-left">
-        <img class="gallery__modal-img" src="/img/gallery/1.png" alt="Женщина с граблями - Казимир Малевич">
+        <img class="gallery__modal-img" src="https://aleksey-davidenko.github.io/project/img/gallery/1.png" alt="Женщина с граблями - Казимир Малевич">
       </div>
       <div class="gallery__modal-container-right">
         <button class="gallery__modal-close">
